# omnirepo

./: README.md  pyproject.toml
omnirepo/: cli.py  utils.py
omnirepo/templates/buildable/: pyproject.toml.template  templates.txt
omnirepo/templates/buildable/%PACKAGE_NAME%/: __init__.py.template  core.py.template
omnirepo/templates/default/: core.py.template  templates.txt
